# KT

./: .agentignore  .gitattributes  .gitignore  CURRENT_REPO_STATUS_AND_BOUNDARY.md  EPOCH_CROSS.json  EPOCH_GOV.json  EPOCH_PARADOX.json  KAGGLE_CELL_MRT1_FINAL.txt  LICENSE  OPERATION_A_COMPLETION_SUMMARY.txt  OPERATION_A_FINAL_REPORT.md  OPERATION_A_INDEX.md  PACKET_MANIFEST.json  README.md  REPO_CANON.md  SHA256_MANIFEST.json  SOURCE_EVIDENCE_INDEX.json  acceptance_checklist.txt  adapter_niche_boundary_scorecard.json  analyze_autonomous_run.py  analyze_escalation.py  phaseA_commit_hash.txt  run_autonomous_escalation.py  run_kt_e2e.sh  run_manifest.schema.json  runbook.txt  specialist_admission_atlas.json  utility_under_constraint_gate.json
KT_PROD_CLEANROOM/: AUDIT_LIVE_HASHED_V1.md  CODEX_MASTER_PROMPT_POST_WAVE5_V1.md  EXECUTION_DAG_POST_WAVE5_V1.md  FINAL_CAMPAIGN_SYNTHESIS_PROMPT.md  W4_PHASE_GATES.md  decision_log.md  kt.cohort0_phase1c_certification_work_order.v1.json  kt.cohort1_phase2_unlock_work_order.v1.json  kt.cohort2_phase3_scale_work_order.v1.json  kt.phase1b_completion_report.v1.json  kt.phase1c_work_order.v1.json  kt.phase2_work_order.v1.json  kt.post_wave5_maxpower_rectification.v1.json  kt.protocol_gap_report.v1.json  pyproject.toml  pytest.ini  requirements-wave0.in  requirements-wave0.lock.txt  run_policy_c_smoke_train.py  sitecustomize.py
KT_PROD_CLEANROOM/00_README_FIRST/: W4_NAMING_CONVENTIONS.md  W4_PHASE_GATES.md  W4_RULES.md  WHEN_IS_V2_DONE.md
KT_PROD_CLEANROOM/AUDITS/: ANCHOR_REFERENCE_SET.json  AXIS_SCORING_POLICY_AXIOM_PROTOCOLS_V1.json  (+229 more)
(+9419 files in other folders)
